@@ -3,7 +3,9 @@
 use strict;
 use warnings;
 
-use Test::More tests => 3;
+use Test::More tests => 4;
+
+use Test::Differences;
 
 use Games::ABC_Path::MicrosoftRand;
 
@@ -18,4 +20,18 @@ use Games::ABC_Path::MicrosoftRand;
 
     # TEST
     is ($r->rand(), 6_334, "3rd result for seed 1 is 6,334.");
+}
+
+{
+    my $r = Games::ABC_Path::MicrosoftRand->new(seed => 24);
+
+    my @array = (0 .. 9);
+
+    $r->shuffle(\@array);
+    # TEST
+    eq_or_diff(
+        \@array,
+        [1,7,9,8,4,5,3,2,0,6],
+        'Array was shuffled.',
+    );
 }
